--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -363,7 +363,7 @@ pre {
 
 pre code, pre tt {
     font-size: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
     background: transparent;
     border: none;
     padding: 0;
